--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.mvc.view.prefix=/WEB-INF/
 
 spring.datasource.url= jdbc:mysql://localhost:3306/proyecto_practico
 spring.datasource.username= root
-spring.datasource.password= 
+spring.datasource.password= rootdb
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
